<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_scp_home"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/scp_home" />
        <item
            android:id="@+id/nav_series_I"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/series_i" />
        <item
            android:id="@+id/nav_series_II"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/series_ii" />
        <item
            android:id="@+id/nav_series_III"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/series_iii" />
        <item
            android:id="@+id/nav_series_IV"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/series_iv" />
    </group>

    <item android:title="Unimplemented">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Unimplemented" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Unimplemented" />
        </menu>
    </item>

</menu>
